Ideate on how to fix the dark mode filled problem

--- a/src/css/components/select.sass
+++ b/src/css/components/select.sass
@@ -20,8 +20,10 @@ $select-height: 28px
   align-items: center
   //// padding: 0 4px // Nudge
   height: $select-height
+  background-color: $form-color
   border-radius: 1e3px
-  box-shadow: $inset-hairline-shadow
+  box-shadow: $hairline-shadow
+  //// box-shadow: $hairline-shadow, $realistic-shadow
 
 .select-button-type
   // TYPOGRAPHY
