--- a/src/css/tokens.sass
+++ b/src/css/tokens.sass
@@ -2,34 +2,33 @@
 
 $include: false !default
 
-$hairline-height:          1px
-$sidebar-padding-y:        32px
-$sidebar-padding-x:        16px
-$sidebar-gap:              16px
-$button-height:            40px
-$button-icon-height:       18px
-$tiny-icon-height:         14px
+$hairline-height:        1px
+$sidebar-padding-y:      32px
+$sidebar-padding-x:      16px
+$sidebar-gap:            16px
+$button-height:          40px
+$button-icon-height:     18px
+$tiny-icon-height:       14px
 
 ////////////////////////////////////////////////////////////////////////////////
 
-$brand-color:              var(--brand-color)
-$base-color:               var(--base-color)
-$form-color:               var(--form-color)
-$hover-color:              var(--hover-color)
-$hover-active-color:       var(--hover-active-color)
-$hairline-color:           var(--hairline-color)
-$soft-hairline-color:      var(--soft-hairline-color)
-$realistic-shadow-color:   var(--realistic-shadow-color)
-$text-100-color:           var(--text-100-color)
-$text-200-color:           var(--text-200-color)
-$text-300-color:           var(--text-300-color)
-$text-400-color:           var(--text-400-color)
+$brand-color:            var(--brand-color)
+$base-color:             var(--base-color)
+$form-color:             var(--form-color)
+$hover-color:            var(--hover-color)
+$hover-active-color:     var(--hover-active-color)
+$hairline-color:         var(--hairline-color)
+$soft-hairline-color:    var(--soft-hairline-color)
+$realistic-shadow-color: var(--realistic-shadow-color)
+$text-100-color:         var(--text-100-color)
+$text-200-color:         var(--text-200-color)
+$text-300-color:         var(--text-300-color)
+$text-400-color:         var(--text-400-color)
 
-// TODO: Add shadow-color?
-$inset-hairline-shadow:    var(--inset-hairline-shadow)
-$hairline-shadow:          var(--hairline-shadow)
-$hairline-shadow-bottom:   var(--hairline-shadow-bottom)
-$realistic-shadow:         var(--realistic-shadow)
+$inset-hairline-shadow:  var(--inset-hairline-shadow)
+$hairline-shadow:        var(--hairline-shadow)
+$hairline-shadow-bottom: var(--hairline-shadow-bottom)
+$realistic-shadow:       var(--realistic-shadow)
 
 ////////////////////////////////////////////////////////////////////////////////
 
@@ -61,6 +60,7 @@ $realistic-shadow:         var(--realistic-shadow)
     --text-200-color:         #{hsl(210,  50%,  37.5%) /* +12.5% */}
     --text-300-color:         #{hsl(210,  50%,  50%)   /* +12.5% */}
     --text-400-color:         #{hsl(210,  50%,  62.5%) /* +12.5% */}
+    --text-400-color:         #{$text-100-color}
 
   :root[data-theme=dark]
     --brand-color:            #{dodgerblue}
